# ai-search_staatsarchiv

./: .env  .gitignore  01_get_data.ipynb  02_krp.ipynb  03_rrb.ipynb  04_os.ipynb  05_abl.ipynb  06a_chunk.ipynb  06a_chunk_and_embed.ipynb  06b_embed_colab.ipynb  07_create_search-index.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt  staatsarchiv_utils.py
_01_data-input/ABl/: _placeholder.md
_streamlit_app/: hybrid_search_stazh.py  projectinfo.md  style.css
_streamlit_app/.streamlit/: config.toml
